Fixed inconsistent z-index of dropdown
The menu of an open dropdown (z-index currently 20) must be rendered above a navbar (z-index 30). Both must be rendered below a modal (z-index 4).

Using a z-index of 35 for a drowdown menu fixes the issue.

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -6669,7 +6669,7 @@ button.tag:active,
   --bulma-dropdown-content-padding-top: 0.5rem;
   --bulma-dropdown-content-radius: var(--bulma-radius);
   --bulma-dropdown-content-shadow: var(--bulma-shadow);
-  --bulma-dropdown-content-z: 20;
+  --bulma-dropdown-content-z: 35;
   --bulma-dropdown-item-h: var(--bulma-scheme-h);
   --bulma-dropdown-item-s: var(--bulma-scheme-s);
   --bulma-dropdown-item-l: var(--bulma-scheme-main-l);
